--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Welcome to MindsMatter</h1>
 <p>The MindsMatter web development team are currently building our website, so watch this space.</p>
-<img src="blob:https://imgur.com/fb053193-8b76-445b-b6f9-620b5a10e57b">
+<img src="https://imgur.com/fb053193-8b76-445b-b6f9-620b5a10e57b">
 </body>
 </html>
