--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Welcome to MindsMatter</h1>
-<p>The MindsMatter web development team are currently building our website, so watch this space.</p>
-<img src="https://i.imgur.com/kpql0m3.gif">
+<center><h1>Welcome to MindsMatter</h1>
+<center><p>The MindsMatter web development team are currently building our website, so watch this space.</p>
+<center><img src="https://i.imgur.com/kpql0m3.gif">
 </body>
 </html>
