--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<center><h1>Welcome to MindsMatter</h1>
-<center><p>The MindsMatter web development team are currently building our website, so watch this space.</p>
+<center><h1 style= "font-family: Calibri">Welcome to MindsMatter</h1>
+<center><p style= "font-family: Calibri">The MindsMatter web development team are currently building our website, so watch this space.</p>
 <center><img src="https://i.imgur.com/kpql0m3.gif">
+
+
+
 </body>
 </html>
